--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Poppins:wght@600&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
+    <title>Contact Us</title>
 </head>
 
 <body>
@@ -44,7 +48,6 @@
         <div class="wrapper">
             <h2>CONTACT US</h2>
             <form action="" method="post" id="message">
-
                 <div class="form-group">
                     <label for="">Full Name</label>
                     <input type="text" id="contactUs-name">
@@ -65,7 +68,6 @@
                 <div class="form-group">
                     <button type="submit" class="submit" onclick="createMessage()">Send Message</button>
                 </div>
-
             </form>
         </div>
     </div>
