connect API cek resi dan cek ongkir

--- a/contact.html
+++ b/contact.html
@@ -47,21 +47,21 @@
     <div class="container-contact" id="container-message">
         <div class="wrapper">
             <h2>CONTACT US</h2>
-            <form action="" method="post" id="message">
+            <form action="" method="POST" id="message">
                 <div class="form-group">
-                    <label for="">Full Name</label>
+                    <label for="contactUs-name">Full Name</label>
                     <input type="text" id="contactUs-name">
                 </div>
                 <div class="form-group">
-                    <label for="">Email Address</label>
+                    <label for="contactUs-email">Email Address</label>
                     <input type="email" id="contactUs-email">
                 </div>
                 <div class="form-group">
-                    <label for="">Subject</label>
+                    <label for="contactUs-subject">Subject</label>
                     <input type="text" id="contactUs-subject">
                 </div>
                 <div class="form-group">
-                    <label for="">Message</label>
+                    <label for="contactUs-theMessage">Message</label>
                     <textarea id="contactUs-theMessage" rows="5" placeholder="Type your message here..."></textarea>
                 </div>
 
