--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
     <div class="container-contact" id="container-message">
         <div class="wrapper">
             <h2>CONTACT US</h2>
-            <form action="" method="POST" id="message">
+            <form id="message">
                 <div class="form-group">
                     <label for="contactUs-name">Full Name</label>
                     <input type="text" id="contactUs-name">
@@ -66,13 +66,14 @@
                 </div>
 
                 <div class="form-group">
-                    <button type="submit" class="submit" onclick="createMessage()">Send Message</button>
+                    <button type="button" class="submit" onclick="createMessage()">Send Message</button>
                 </div>
             </form>
         </div>
     </div>
 
     <script src="index.js"></script>
+    <script src="./JS/API.js"></script>
 </body>
 
 </html>
