--- a/about-us.html
+++ b/about-us.html
@@ -45,7 +45,7 @@
     </div>
     <div class="content2">
         <div class="hero-about-us">
-            <h1>BANNER</h1>
+            <h1>SWIFT EXPRESS</h1>
         </div>
     </div>
 
