--- a/login.html
+++ b/login.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sliding Login Form</title>
+    
     <link rel="stylesheet" type="text/css" href="./CSS/LoginStyle.css">
     <script src="https://kit.fontawesome.com/48ba85b5e8.js" crossorigin="anonymous"></script>
-    
+    <title>Swift Express</title>
+
 </head>
 <body>
     <div class="container" id="main">
