--- a/news.html
+++ b/news.html
@@ -46,7 +46,7 @@
     <!-- hero section -->
     <div class="content-news">
         <div class="hero-news">
-            <h1>BANNER</h1>
+            <h1>SWIFT EXPRESS</h1>
         </div>
     </div>
 
