--- a/our-team.html
+++ b/our-team.html
@@ -46,7 +46,7 @@
 
     <div class="content2">
         <div class="hero">
-            <h1>BANNER PROMO</h1>
+            <h1>SWIFT EXPRESS</h1>
         </div>
     </div>
 
