minor fixing index dan images

--- a/index.html
+++ b/index.html
@@ -71,20 +71,20 @@
                     <form method="get">
                         <label for="opsi-asal">Asal:</label>
                         <select class="opsi-asal" id="opsi-asal" name="opsi-asal">
-                          <option value="makassar">Makassar</option>
-                          <option value="surabaya">Surabaya</option>
-                          <option value="bandung">Bandung</option>
-                          <option value="jakarta">Jakarta</option>
+                          <option value="Makassar">Makassar</option>
+                          <option value="Surabaya">Surabaya</option>
+                          <option value="Bandung">Bandung</option>
+                          <option value="Jakarta">Jakarta</option>
                         </select>
                     </form>
 
                     <form method="get">
                         <label for="opsi-tujuan">Tujuan:</label>
                         <select class="opsi-tujuan" id="opsi-tujuan" name="opsi-tujuan">
-                          <option value="makassar">Makassar</option>
-                          <option value="surabaya">Surabaya</option>
-                          <option value="bandung">Bandung</option>
-                          <option value="jakarta">Jakarta</option>
+                          <option value="Makassar">Makassar</option>
+                          <option value="Surabaya">Surabaya</option>
+                          <option value="Bandung">Bandung</option>
+                          <option value="Jakarta">Jakarta</option>
                         </select>
                     </form>
 
