--- a/about-us.html
+++ b/about-us.html
@@ -77,9 +77,9 @@
             </p>
             </div>
         <div class="misi">
-            <h4>Berkomitmen untuk memberikan layanan ekspedisi yang cepat dan efisien kepada pelanggan kami, sehingga barang-barang mereka dapat tiba tepat waktu di tujuan.</h4>
-            <h4>Berusaha untuk menjadi mitra yang dapat diandalkan bagi pelanggan kami dalam mengatasi tantangan logistik mereka. Kami akan menjaga integritas dan keamanan barang-barang yang kami tangani.</h4>
-            <h4>Kepuasan pelanggan adalah prioritas utama kami. Kami akan terus mendengarkan kebutuhan pelanggan kami dan berupaya untuk melampaui harapan mereka dalam setiap aspek layanan ekspedisi.</h4>
+            <h4>Memberikan layanan ekspedisi yang cepat dan efisien kepada pelanggan kami</h4>
+            <h4>Menjadi mitra yang dapat diandalkan bagi pelanggan kami</h4>
+            <h4>Kepuasan pelanggan adalah prioritas utama kami</h4>
         </div>
     </div>
 </section>
