--- a/news.html
+++ b/news.html
@@ -46,7 +46,7 @@
     <!-- hero section -->
     <div class="content-news">
         <div class="hero-news">
-            <h1>BANNER</h1>
+            <h1>SWIFT EXPRESS</h1>
         </div>
     </div>
 
@@ -54,7 +54,7 @@
     <div class="container-search-news">
         <div class="search-bar-news">
             <i class="bi bi-search"></i>
-            <input type="text" id="search" placeholder="How to make money">
+            <input type="text" id="search" placeholder="Cari berita terbaru!">
             <button type="submit">Search</button>
         </div>
     </div>
@@ -74,11 +74,9 @@
                             <img src="images/avatar.jpg" alt="">
                         </div>
                         <div class="caption-img-news">
-                            <p>person - 03 -maret 2023</p>
-                            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, laborum!</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia impedit quis tenetur
-                                iusto
-                                eius minus eum unde. Eos, id repellendus!</p>
+                            <p>21 Februari 2023</p>
+                            <h3>KIRIM PAKET SEKARANG PAKAI SWIFT EXPRESS, GRATIS ONGKIR SAMPAI 15 RIBU!!!!</h3>
+                            <p>Swift Express selalu menjadi yang terdepan dalam jasa ekspedisi, kali ini juga memberikan promo yang tidak kalah menarik...</p>
                         </div>
                     </div>
                     <div class="content-left-news">
@@ -86,11 +84,9 @@
                             <img src="images/avatar.jpg" alt="">
                         </div>
                         <div class="caption-img-news">
-                            <p>person - 03 -maret 2023</p>
-                            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, laborum!</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia impedit quis tenetur
-                                iusto
-                                eius minus eum unde. Eos, id repellendus!</p>
+                            <p>20 Maret 2023</p>
+                            <h3>FITUR BARU SWIFT EXPRESS TELAH HADIR DI BERSAMA KITA!!!</h3>
+                            <p>Telah keluar fitur baru dari Swift Express yang akan membantu kita...</p>
                         </div>
                     </div>
                     <div class="content-left-news">
@@ -98,11 +94,9 @@
                             <img src="images/avatar.jpg" alt="">
                         </div>
                         <div class="caption-img-news">
-                            <p>person - 03 -maret 2023</p>
-                            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, laborum!</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia impedit quis tenetur
-                                iusto
-                                eius minus eum unde. Eos, id repellendus!</p>
+                            <p>5 September 2023</p>
+                            <h3>WOW!! SWIFT EXPRESS LAGI BAGI REJEKI AKHIR TAHUN LHO! AYO JANGAN KETINGGALAN!</h3>
+                            <p>Halo pengguna setia Swift Express! Gimana kabarnya? Ada hadiah nih buat kalian...</p>
                         </div>
                     </div>
                 </div>
@@ -122,37 +116,31 @@
                 <img src="images/cargo-ship.jpg" alt="">
                 <div class="person-artikel">
                     <img src="images/avatar.jpg" alt="">
-                    <p>Suatu Judul 1</p>
+                    <p>Fisya Nisa</p>
                 </div>
-                <p>5-mei-2023</p>
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sequi?</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit consectetur inventore consequuntur
-                    atque repellendus. Aperiam delectus amet voluptatem autem eos labore exercitationem, molestiae
-                    placeat ut.</p>
+                <p>11 Juli 2023</p>
+                <h4>SWIFT NEWS: ADA PENERAPAN HARGA BARU DALAM PENGIRIMAN PAKET!</h4>
+                <p>Penerapan harga akan disesuaikan dengan pendapatan minimum setiap daerah...</p>
             </div>
             <div class="artikel-img">
                 <img src="images/cargo-ship.jpg" alt="">
                 <div class="person-artikel">
                     <img src="images/avatar.jpg" alt="">
-                    <p>Suatu Judul 2</p>
+                    <p>Lulu Salma</p>
                 </div>
-                <p>5-mei-2023</p>
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sequi?</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit consectetur inventore consequuntur
-                    atque repellendus. Aperiam delectus amet voluptatem autem eos labore exercitationem, molestiae
-                    placeat ut .</p>
+                <p>5 Mei 2023</p>
+                <h4>KIRIMKAN PAKET PERTAMAMU, BAYAR SETENGAH ONGKOSNYA!</h4>
+                <p>Paket berat, harga ringan. Hanya untuk pengiriman pertama! Ayo segera kirimkan paketmu...</p>
             </div>
             <div class="artikel-img">
                 <img src="images/cargo-ship.jpg" alt="">
                 <div class="person-artikel">
                     <img src="images/avatar.jpg" alt="">
-                    <p>Suatu Judul 3</p>
+                    <p>Marsyanda Razita</p>
                 </div>
-                <p>5-mei-2023</p>
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sequi?</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit consectetur inventore consequuntur
-                    atque repellendus. Aperiam delectus amet voluptatem autem eos labore exercitationem, molestiae
-                    placeat ut</p>
+                <p>11 Oktober 2023</p>
+                <h4>GEBYAR MERIAH SATU TAHUNAN SWIFT EXPRESS!</h4>
+                <p>Perayaan satu tahun Swift Express akan bagi-bagi hadiah hingga 10 Miliar! Yuk buruan...</p>
             </div>
         </div>
       
